# e-lims-cookiecutter-template

./: .bumpversion.cfg  .cruft.json  .readthedocs.yaml  CHANGELOG.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
docs/: conf.py  index.rst  requirements.txt
e-lims-cookiecutter-template/: __init__.py  e-lims-cookiecutter-template.py
e_lims_cookiecutter_template/: __init__.py
tests/: __init__.py  test_e-lims-cookiecutter-template.py  test_e_lims_cookiecutter_template.py
